# BrowserUse_YC_Hackathon

./: .gitignore  README.md  REPLAYBENCH_HACKATHON_PLAN.md
backend/: .env.example  HUD_TRACE_API.md  api.py  config.py  data_pipeline.py  determinism.py  experiment_runner.py  fetch_trajectories.py  get_traces.py  hud_runner.py  inspect_traces.py  probe_analytics_mcp.py  pyproject.toml  qa_analyzers.py  query_engine.py  requirements.txt  task_payload.py  tasks.yaml  validate_canary_compat.py
frontend/: .env.example  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/experiments/[id]/: page.tsx
frontend/app/experiments/new/: page.tsx
frontend/app/server/: inner.tsx  page.tsx
frontend/components/: AnalyticsCharts.tsx  ChatInterface.tsx  ComparisonTable.tsx  ConvexClientProvider.tsx  LiveProgress.tsx  QAAnalyzersPanel.tsx  TraceViewer.tsx
frontend/convex/: chat.ts  experiments.ts  http.ts  myFunctions.ts  qaAnalyzerRuns.ts  runs.ts  schema.ts  seed.ts  tasks.ts  variants.ts
frontend/convex/_generated/: api.d.ts
hud_environment/: Dockerfile.hud  README.md  env.py  pyproject.toml  remote_tasks.json
hud_environment/.hud/: deploy.json
